--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,7 @@ edition = "2021"
 
 [dependencies]
 konst = { version = "0.3.9", features = ["iter"] }
+
+[dev-dependencies]
+serde = { version = "1.0.204", features = ["derive"] }
+serde_json = "1.0.122"
