--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 konst = { version = "0.3.9", features = ["iter"] }
+syn-lite = "0.1.0"
 
 [dev-dependencies]
 serde = { version = "1.0.204", features = ["derive"] }
