feat!: remove IdentSequence::to_str and IdentToken::to_str because they are ambiguous when the string contains escaped code points
Other changes:
- BREAKING: rename Declaration method `name_as_str, value_as_str, to_tuple_str` to `*_original_str` because they may contain escaped code points
- add `alloc` feature where `IdentSequence::unescape` and `Ident::unescape` are implemented
- IdentSequence::consume_anyway is made private (IdentSequence is not exported).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ konst = { version = "0.3.9", features = ["iter"] }
 [dev-dependencies]
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.122"
+
+[features]
+alloc = []
