--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "ccss"
 version = "0.1.0"
 edition = "2021"
+description = "Const CSS parser"
+repository = "https://github.com/frender-rs/ccss"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 konst = { version = "0.3.9", features = ["iter"] }
